# asrled

./: CMakeLists.txt  README.md  main.cpp  makedef.php  proxy.cpp  util.h
ManagedHook/: AsrockDeviceIoControlHandler.cs  EntryPoint.cs  ManagedHook.csproj  Program.cs
